--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
+title:               Gyu-Ho Lee
+tagline:             'A problem solving history'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://secondwind86.github.io/
+url:                 https://secondwind86.github.io/
 baseurl:             ''
 paginate:            5
 permalink:           pretty
