modified sidebar intro

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Gyu-Ho Lee
 tagline:             'A problem solving history'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:         'Robot Platform and deep learning engineer. <br> KT corp. <br>M.Eng of Engineering Practice, SNU'
 url:                 https://secondwind86.github.io/
 baseurl:             ''
 paginate:            5
