--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Gyu-Ho Lee
 tagline:             'A problem solving history'
-description:         'Robot Platform and deep learning engineer. <br> KT corp. <br>M.Eng of Engineering Practice, SNU'
+description:         'Robot Platform and data analysis engineer<br> KT corp. <br>M.Eng of Engineering Practice, SNU'
 url:                 https://secondwind86.github.io/
 baseurl:             ''
 paginate:            5
