--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Gyu-Ho Lee
 tagline:             'A problem solving history'
-description:         'Robot Platform and data analysis engineer<br> KT corp. <br>M.Eng of Engineering Practice, SNU'
+description:         'Robot Platform and Data analysis engineer<br> Korea Telecom <br>M.Eng of Engineering Practice, SNU'
 url:                 https://secondwind86.github.io/
 baseurl:             ''
 paginate:            5
@@ -9,14 +9,14 @@ permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
+  name:              Gyuho Lee
   url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  email:             secondwind86@gmail.com
 
 # Gems
 plugins:
   - jekyll-paginate
 
 # Custom vars
-version:             1.1.0
+version:             0.11
 google_analytics_id: #UA-XXXX-Y
